--- a/board/.project
+++ b/board/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>board</name>
+	<name>bttf</name>
 	<comment></comment>
 	<projects>
 	</projects>
