--- a/bttf/.classpath
+++ b/bttf/.classpath
@@ -63,5 +63,6 @@
 			<attribute name="m2e-apt" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/bttf"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
