--- a/bttf/src/main/webapp/WEB-INF/web.xml
+++ b/bttf/src/main/webapp/WEB-INF/web.xml
@@ -3,11 +3,11 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee https://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 
-<!-- 	<welcome-file-list> -->
-<!--     	<welcome-file>index.html</welcome-file> -->
-<!--     	<welcome-file>index.htm</welcome-file> -->
-<!--     	<welcome-file>index.jsp</welcome-file> -->
-<!-- 	</welcome-file-list> -->
+	<welcome-file-list>
+    	<welcome-file>index.jsp</welcome-file>
+    	<welcome-file>index.html</welcome-file>
+    	<welcome-file>index.htm</welcome-file>
+	</welcome-file-list>
 	
 	<!-- The definition of the Root Spring Container shared by all Servlets and Filters -->
 	<context-param>
