--- a/bttf/.classpath
+++ b/bttf/.classpath
@@ -52,5 +52,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/lombok.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/jjwt-0.9.1.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
