--- a/bttf/.classpath
+++ b/bttf/.classpath
@@ -40,7 +40,7 @@
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/shiro-all-1.8.0.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/standard.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/tomcat-dbcp.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v9.0">
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/bttf">
 		<attributes>
 			<attribute name="owner.project.facets" value="#system#;jst.web"/>
 		</attributes>
