--- a/bttf/.classpath
+++ b/bttf/.classpath
@@ -53,5 +53,6 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/lombok.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/jjwt-0.9.1.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/commons-email-1.5.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
