--- a/bttf/.settings/org.eclipse.core.resources.prefs
+++ b/bttf/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
+encoding//src/main/webapp/WEB-INF/views/board/csslist.jsp=UTF-8
 encoding//src/main/webapp/resources/css/custom.css=UTF-8
 encoding/<project>=UTF-8
